force-app/main/default/objects/Journey_Plan_Day__c/Journey_Plan_Day__c.object-meta.xml
<CustomObject>
    <label>Journey Plan Day</label>
    <pluralLabel>Journey Plan Days</pluralLabel>
    <nameField>
        <label>Journey Plan Day Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
    <description>Daily plan entries within a Journey Plan defining beat assignments per day and week (MOD-02 Beat Plan and Route Management)</description>
</CustomObject>