force-app/main/default/objects/Journey_Plan_Day__c/fields/Beat__c.field-meta.xml
<CustomField>
    <fullName>Beat__c</fullName>
    <label>Beat</label>
    <type>Lookup</type>
    <referenceTo>Beat__c</referenceTo>
    <relationshipLabel>Journey Plan Days</relationshipLabel>
    <relationshipName>Journey_Plan_Days</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>