force-app/main/default/objects/Journey_Plan_Day__c/fields/Beat_Name__c.field-meta.xml
<CustomField>
    <fullName>Beat_Name__c</fullName>
    <label>Beat Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>