force-app/main/default/objects/Journey_Plan_Day__c/fields/Journey_Plan__c.field-meta.xml
<CustomField>
    <fullName>Journey_Plan__c</fullName>
    <label>Journey Plan</label>
    <type>MasterDetail</type>
    <referenceTo>Journey_Plan__c</referenceTo>
    <relationshipLabel>Journey Plan Days</relationshipLabel>
    <relationshipName>Journey_Plan_Days</relationshipName>
    <relationshipOrder>0</relationshipOrder>
</CustomField>