force-app/main/default/objects/Journey_Plan_Day__c/fields/Planned_Outlets__c.field-meta.xml
<CustomField>
    <fullName>Planned_Outlets__c</fullName>
    <label>Planned Outlets</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
</CustomField>