force-app/main/default/objects/Journey_Plan_Day__c/fields/Sequence_Order__c.field-meta.xml
<CustomField>
    <fullName>Sequence_Order__c</fullName>
    <label>Sequence Order</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>