force-app/main/default/objects/Journey_Plan_Day__c/fields/Visited_Outlets__c.field-meta.xml
<CustomField>
    <fullName>Visited_Outlets__c</fullName>
    <label>Visited Outlets</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>