force-app/main/default/objects/Journey_Plan_Day__c/fields/Week_Number__c.field-meta.xml
<CustomField>
    <fullName>Week_Number__c</fullName>
    <label>Week Number</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Week 1</fullName>
            </value>
            <value>
                <fullName>Week 2</fullName>
            </value>
            <value>
                <fullName>Week 3</fullName>
            </value>
            <value>
                <fullName>Week 4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>